Resolved the issue #3. Bumped the version. Added the changelog record.
Squashed commit of the following:

commit 5062de19bdeea269c03400f516e2937430a31d15
Author: Pavel Bychikhin <pbychikhin@yahoo.com>
Date:   Fri Feb 16 16:18:07 2018 +0200

    Corrected the algorithm of changes merging.
    Compacted log message prefix of step merge actions to single word "merge".

commit faafada59cb973b1c208fbd64625eeb8310aaed4
Author: Pavel Bychikhin <pbychikhin@yahoo.com>
Date:   Thu Feb 15 17:34:57 2018 +0200

    Added logging for step_changes merging

commit 91365e9ba41724ec6c1bdcf37b7ac919b81ff759
Author: Pavel Bychikhin <pbychikhin@yahoo.com>
Date:   Thu Feb 15 16:50:02 2018 +0200

    Implemented additions to step_changes in both step functions
    Implemented step_changes merging in do_actions

commit bcee13c2745987842ec93d36fca59574d771f42e
Author: Pavel Bychikhin <pbychikhin@yahoo.com>
Date:   Tue Feb 13 13:05:29 2018 +0200

    Added a list of changes to be merged at the end of a step

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+1.1
+- milter_env_addr_mangle:
+    - changed the merging algorithm: actions don't change data directly. they add changes to the special list instead.
+      this list is processed in the end after all actions so the changes made by one action will not be discarded by
+      another one.
+
 1.0
 - milter_env_addr_mangle:
     - added application (py), sample config (yml), Debian init scrips (sh)
